--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -85,7 +85,7 @@
         </button>
         <button class="btn btn-default right"
                 ng-if="listModel.selectEnabled"
-                ng-class="listModel.selectMode ? 'btn-primary' : 'btn-default'"
+                ng-class="listModel.selectMode ? 'btn-success' : 'btn-default'"
                 ng-click="listModel.toggleSelectMode()">
           <i class="glyphicon glyphicon-edit"
              ng-class="listModel.selectMode ? 'glyphicon-check' : 'glyphicon-edit'"
