--- a/web/app/language/view.tpl.html
+++ b/web/app/language/view.tpl.html
@@ -1,11 +1,3 @@
-<cn-record-view list-model="cnList" view-model="cnView">
-  <cn-record-input form="form" key="id" title="ID">
-    <input name="id"
-           ng-model="record.id"
-           class="form-control"
-           type="text"
-           placeholder="ID"
-           autocomplete="off"
-           required /></div>
-  </cn-record-input>
-</cn-record-view>
+<cn-record-view list-model="cnList" view-model="cnView"></cn-record-view>
+<div class="vertical-spacer"></div>
+<cn-record-list heading="User Access List" list-model="cnView.cnUserList"></cn-record-list>
