--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,9 +1,72 @@
 <div class="container-fluid bg-primary rounded-top"><h4>{{ heading }}</h4></div>
 <form name="form" class="form-horizontal" novalidate>
-  <div class="form-body" ng-transclude></div>
+  <div class="form-body">
+    <ng-form ng-repeat="input in inputList"
+             name="innerForm">
+      <div class="form-group"
+           ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
+        <label for="name" class="col-sm-3 control-label" tooltip="{{ input.help }}">{{ input.title }}</label>
+        <div class="col-sm-9">
+          <div class="input-group"
+               ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
+            <input ng-if="'string' == input.type"
+                   ng-attr-id="{{ input.key }}"
+                   name="name"
+                   ng-model="record[input.key]"
+                   cn-change="patch( input.key )"
+                   class="form-control"
+                   type="text"
+                   autocomplete="off"
+                   ng-readonly="input.constant"
+                   ng-required="input.required"></input>
+            <input ng-if="'integer' == input.type"
+                   ng-attr-id="{{ input.key }}"
+                   name="name"
+                   ng-model="record[input.key]"
+                   cn-change="patch( input.key )"
+                   class="form-control"
+                   type="number"
+                   pattern="\d*"
+                   autocomplete="off"
+                   ng-readonly="input.constant"
+                   ng-required="input.required"></input>
+            <select ng-if="'boolean' == input.type || 'enum' == input.type"
+                    ng-attr-id="{{ input.key }}"
+                    name="name"
+                    ng-options="item.value as item.name for item in input.enum"
+                    ng-model="record[input.key]"
+                    cn-change="patch( input.key )"
+                    class="form-control"
+                    ng-readonly="input.constant"
+                    ng-required="input.required"></select>
+            <textarea ng-if="'text' == input.type || 'constant text' == input.type"
+                      ng-attr-id="{{ input.key }}"
+                      name="name"
+                      ng-model="record[input.key]"
+                      cn-change="patch( input.key )"
+                      class="form-control"
+                      ng-readonly="input.constant"
+                      ng-required="input.required"></textarea>
+          </div>
+          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.required">
+            Cannot be blank
+          </span>
+          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.minlength">
+            Isn't long enough
+          </span>
+          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.number">
+            Must be a number
+          </span>
+          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.conflict">
+            Conflicts with existing record
+          </span>
+        </div>
+      </div>
+    </ng-form>
+  </div>
   <div class="form-footer rounded-bottom">
     <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
-    <button type="button" class="btn btn-primary" ng-click="form.$valid && submit()">
+    <button type="button" class="btn btn-primary" ng-click="submit()">
       <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
     </button>
   </div>
