--- a/web/app/site/add.tpl.html
+++ b/web/app/site/add.tpl.html
@@ -1,20 +1,1 @@
-<cn-record-add list-model="cnList" add-model="cnAdd">
-  <cn-record-input form="form" key="name" title="Name">
-    <input name="name"
-           ng-model="record.name"
-           class="form-control"
-           type="text"
-           ng-minlength="3"
-           ng-maxlength="45"
-           autocomplete="off"
-           required /></div>
-  </cn-record-input>
-  <cn-record-input form="form" key="timezone" title="Time Zone">
-    <select name="timezone"
-            ng-model="record.timezone"
-            class="form-control"
-            required>
-      <option ng-repeat="option in local.metadata.timezoneList" value="{{ option }}">{{ option }}</option>
-    </select>
-  </cn-record-input>
-</cn-record-add>
+<cn-record-add list-model="cnList" add-model="cnAdd"></cn-record-add>
