--- a/web/app/user/add.tpl.html
+++ b/web/app/user/add.tpl.html
@@ -1,19 +1,1 @@
-<cn-record-add list-model="cnList" add-model="cnAdd">
-  <cn-record-input form="form" key="name" title="Name">
-    <input name="name"
-           ng-model="record.name"
-           class="form-control"
-           type="text"
-           ng-maxlength="45"
-           autocomplete="off"
-           required /></div>
-  </cn-record-input>
-  <cn record-input form="form" key="active" title="Active">
-    <select name="active"
-            ng-model="record.active"
-            class="form-control">
-      <option value="1" selected>Yes</option>
-      <option value="0">No</option>
-    </select>
-  </cn-record-input>
-</cn-record-add>
+<cn-record-add list-model="cnList" add-model="cnAdd"></cn-record-add>
