--- a/web/app/state/add.tpl.html
+++ b/web/app/state/add.tpl.html
@@ -1,10 +1,1 @@
-<cn-record-add list-model="cnList" add-model="cnAdd">
-  <cn-record-input form="form" key="id" title="ID">
-    <input name="id"
-           ng-model="record.id"
-           class="form-control"
-           type="text"
-           autocomplete="off"
-           required /></div>
-  </cn-record-input>
-</cn-record-add>
+<cn-record-add list-model="cnList" add-model="cnAdd"></cn-record-add>
