--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -1,21 +1,1 @@
-<cn-record-view list-model="cnList" view-model="cnView">
-  <cn-record-input form="form" key="name" title="Name">
-    <input name="name"
-           ng-model="local.cnView.record.name"
-           cn-change="cbPatch( 'name' )"
-           class="form-control"
-           type="text"
-           ng-maxlength="45"
-           placeholder="Name"
-           autocomplete="off"
-           required />
-  </cn-record-input>
-  <cn-record-input form="form" key="active" title="Active">
-    <select name="active"
-            ng-model="record.active"
-            class="form-control">
-      <option value="1" selected>Yes</option>
-      <option value="0">No</option>
-    </select>
-  </cn-record-input>
-</cn-record-view>
+<cn-record-view list-model="cnList" view-model="cnView"></cn-record-view>
