Fixed broken site-role picker

--- a/web/app/cenozo/site-role-picker.tpl.html
+++ b/web/app/cenozo/site-role-picker.tpl.html
@@ -6,7 +6,7 @@
     </button>
     <ul class="dropdown-menu" role="menu">
       <li ng-repeat="s in siteList">
-        <a ng-click="cbSetSite( s.id )">{{ s.name }}</a>
+        <a ng-click="setSite( s.id )">{{ s.name }}</a>
       </li>
     </ul>
   </div>
@@ -17,7 +17,7 @@
     </button>
     <ul class="dropdown-menu" role="menu">
       <li ng-repeat="r in roleList">
-        <a ng-click="cbSetRole( r.id )">{{ r.name | cnUCWords }}</a>
+        <a ng-click="setRole( r.id )">{{ r.name | cnUCWords }}</a>
       </li>
     </ul>
   </div>
