Development in progress

--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -5,8 +5,8 @@
   </div>
   <div class="modal-body">
     <p class="text-info">
-      Provide how you wish to restrict the <em>{{ local.subject }}</em> listing
-      based on the <em>{{ local.column }}</em> column:
+      Provide how you wish to restrict the <strong>{{ local.name.singular | cnUCWords }}</strong> listing
+      based on the <strong>{{ local.column }}</strong> column:
     </p>
     <hr />
     <div class="form-group">
