--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -56,7 +56,7 @@
         <td class="tiny" ng-if="listModel.deleteEnabled">
           <div>
             <button class="btn btn-xs btn-danger"
-                    ng-really-message="Are you sure you want to delete this {{ listModel.name.singular }}?"
+                    cn-really-message="Are you sure you want to delete this {{ listModel.name.singular }}?"
                     cn-really-click="deleteRecord( record.id )"
                     ng-click="$event.stopPropagation()">
               <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
