--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -55,7 +55,7 @@
   </div>
   <div class="form-footer rounded-bottom">
     <button type="button" class="btn btn-danger"
-            ng-really-message="Are you sure you want to delete this {{ viewModel.subject }}?"
+            cn-really-message="Are you sure you want to delete this {{ viewModel.subject }}?"
             cn-really-click="delete()">
       <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i> Delete
     </button>
