Removing aria labels (not supported by the framework yet)

--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -1,6 +1,6 @@
 <form ng-submit="local.close()">
   <div class="modal-header">
-    <button type="button" class="close" aria-hidden="true" ng-click="local.close()">&times;</button>
+    <button type="button" class="close" ng-click="local.close()">&times;</button>
     <h4 class="modal-title">{{ local.title }}</h4>
   </div>
   <div class="modal-body">{{ local.message }}</div>
