--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -67,7 +67,7 @@
   <div class="form-footer rounded-bottom">
     <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="submit()">
-      <i class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></i> Save
+      <i class="glyphicon glyphicon-cloud-upload"></i> Save
     </button>
   </div>
 </form>
