--- a/web/app/cenozo/toolbelt.tpl.html
+++ b/web/app/cenozo/toolbelt.tpl.html
@@ -3,18 +3,18 @@
      class="btn btn-default"
      tooltip="Go to home screen"
      tooltip-placement="bottom">
-    <i class="glyphicon glyphicon-home" aria-hidden="true"></i>
+    <i class="glyphicon glyphicon-home"></i>
   </a>
   <a href="?logout"
      class="btn btn-default"
      tooltip="Logout"
      tooltip-placement="bottom">
-    <i class="glyphicon glyphicon-off" aria-hidden="true"></i>
+    <i class="glyphicon glyphicon-off"></i>
   </a>
   <button class="btn btn-default"
           ng-click="openTimezoneCalculator()"
           tooltip="Timezone Calculator"
           tooltip-placement="bottom">
-    <i class="glyphicon glyphicon-time" aria-hidden="true"></i>
+    <i class="glyphicon glyphicon-time"></i>
   </button>
 </div>
