--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -1,6 +1,6 @@
 <form ng-submit="local.ok( local.comparison )">
   <div class="modal-header">
-    <button type="button" class="close" aria-hidden="true" ng-click="local.cancel()">&times;</button>
+    <button type="button" class="close" ng-click="local.cancel()">&times;</button>
     <h4 class="modal-title">Restrict listing</h4>
   </div>
   <div class="modal-body">
