--- a/web/app/cenozo/modal-timezone-calculator.tpl.html
+++ b/web/app/cenozo/modal-timezone-calculator.tpl.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <button type="button" class="close" aria-hidden="true" ng-click="local.close()">&times;</button>
+  <button type="button" class="close" ng-click="local.close()">&times;</button>
   <h4 class="modal-title">Restrict listing</h4>
 </div>
 <div class="modal-body">
