--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -57,7 +57,7 @@
     <button type="button" class="btn btn-danger"
             cn-really-message="Are you sure you want to delete this {{ viewModel.subject }}?"
             cn-really-click="delete()">
-      <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i> Delete
+      <i class="glyphicon glyphicon-remove-sign"></i> Delete
     </button>
     <button type="button" class="btn btn-default btn-primary" ng-click="back()">Back</button>
   </div> 
