Refining management of states, adding module.add_child states

--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -1,1 +1,3 @@
 <cn-record-view list-model="cnList" view-model="cnView"></cn-record-view>
+<div class="vertical-spacer"></div>
+<cn-record-list heading="Access List" list-model="cnView.cnAccessList" remove-columns="user"></cn-record-list>
