Finished implementing adding/removing sub-records

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -19,6 +19,20 @@
                    autocomplete="off"
                    ng-readonly="input.constant"
                    ng-required="input.required"></input>
+            <input ng-if="'typeahead' == input.type"
+                   ng-attr-id="{{ input.key }}"
+                   name="name"
+                   ng-model="record[input.key]"
+                   typeahead="item.value for item in getTypeaheadValues( input.key, $viewValue )"
+                   typeahead-loading="true"
+                   typeahead-min-length="2"
+                   cn-change="patch( input.key )"
+                   class="form-control"
+                   type="text"
+                   placeholder="(Type the first few letters to search possible values)"
+                   autocomplete="off"
+                   ng-readonly="input.constant"
+                   ng-required="input.required"></input>
             <input ng-if="'integer' == input.type"
                    ng-attr-id="{{ input.key }}"
                    name="name"
