Working on permissions and record restrictions based on application, site and role

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -65,7 +65,7 @@
         </td>
     </tr>
   </tbody>
-  <tfoot ng-if="0 < listModel.cache.length || listModel.addEnabled || listModel.selectEnabled">
+  <tfoot>
     <tr class="info">
       <td colspan="{{ numColumns }}" class="rounded-bottom">
         <pagination class="pagination left"
