Working on webapp modules

--- a/web/app/participant/view.tpl.html
+++ b/web/app/participant/view.tpl.html
@@ -1,1 +1,3 @@
 <cn-record-view list-model="cnList" view-model="cnView"></cn-record-view>
+<div class="vertical-spacer"></div>
+<cn-record-list heading="Address List" list-model="cnView.cnAddressList"></cn-record-list>
